# Cortex-AI

./: .dockerignore  .gitignore  Prompts.md  README.md  api.py  codemagic.yaml  compress_images.py  dataset_combinado_raw.csv  diagrama_secuencia.md  explicsablilidad_wav2vec.md  lanzar_resnet10.bat  lanzar_resnet_noche.bat  lanzar_wav2vec_finetune.bat  pubspec.yaml  pyproject.toml
android/app/: build.gradle.kts
assets/: textos.json  textos.txt
backend/: config.py  main.py  schemas.py
backend/inference/: cloud.py  extractor.py  local.py
bats/: lanzar.ps1  lanzar_wav2vec_finetune.sh
cloud/: modal_app.py
deploy/: Dockerfile  docker-compose.yml  requirements-rpi.txt
docs/: EDA_resultados.md
docs/Memoria/: TFG_PORTADA.docx  ZZZ_PrepararMemoria.py  limpiar.py  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.tex  main.toc  referencias.bib
frontend/: README.md  pubspec.yaml
frontend/lib/: app.dart  main.dart
frontend/linux/: CMakeLists.txt
frontend/web/: index.html  manifest.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
notebooks/: edades.py
src/: config.py
src/data/: build_combined_dataset.py  preprocess_audio.py
src/features/: acoustic.py  build_features.py  embeddings.py  spectrograms.py  split_dataset.py
src/models/: train_cnn.py  train_knn.py  train_resnet.py  train_resnet10.py  (+3 more)
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
(+79 files in other folders)
