[project]
name = "cortex-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "noisereduce>=3.0.3",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "praat-parselmouth>=0.4.7",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "timm>=1.0.25",
    "torch>=2.6.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.6.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
    "xgboost==2.0.3",
    "openpyxl>=3.1.5",
    "transformers>=5.7.0",
    "httpx>=0.28.1",
    "modal>=1.4.3",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }


